# Endcord

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
bot/: README.md  config.schema.json  pyproject.toml
bot/scripts/: bootstrap-host.sh  bootstrap-local-runtime.sh  run-host.sh  run-local-runtime.sh
bot/src/bedrock_discord_bridge_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bot/src/bridge_bot/: config.py  main.py
bot/systemd/: bedrock-discord-bridge-bot.service.example  endcord-bot.service.example
bot/tests/: test_config.py
config/: config.json.example  config.schema.json  discord.env.example
docker/: Dockerfile.debian12-build
include/: bedrock_discord_bridge.h  bridge_support.h  endcord_bot_config.h  endcord_integrated_bot.h
scripts/: build-plugin-debian12.sh  setup-local-libcxx.sh
src/: bedrock_discord_bridge.cpp  bridge_support.cpp  endcord_bot_config.cpp  endcord_integrated_bot.cpp
tests/: bridge_support_test.cpp
