[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-discord-bridge-bot"
version = "0.3.0"
description = "Companion Discord bot for the Bedrock Discord Bridge Endstone plugin."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "aiohttp>=3.9,<4",
  "discord.py==2.7.1",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
bedrock-discord-bridge-bot = "bridge_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
